# sanctum-marinade-liquid-staking-sdk

./: .gitignore  Cargo.toml  README.md  docker-compose-local-validator.yml
.github/workflows/: rust-tests.yml
core/: Cargo.toml
core/src/: consts.rs  error.rs  keys.rs  lib.rs  pda.rs  utils.rs
core/src/instructions/: deposit.rs  deposit_sol.rs  deposit_stake_account.rs  mod.rs  withdraw_stake_account.rs
core/src/state/: list.rs  mod.rs
core/src/typedefs/: fee.rs  fee_cents.rs  liq_pool.rs  list.rs  mod.rs  stake_system.rs  validator_system.rs
core/tests/: mod.rs
core/tests/common/: accounts.rs  consts.rs  mollusk.rs
core/tests/tests/: state.rs
core/tests/tests/instructions/: deposit.rs  deposit_stake_account.rs  mod.rs  withdraw_stake_account.rs
test-fixtures/: marinade-stake_list.json  marinade-state.json  marinade-validator_list.json  stake_account.json  withdraw_stake_account.json
