[workspace]
resolver = "2"

members = [
    "core", 
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
borsh = { version = "^1", default-features = false }
bs58 = { version = "^0.5", default-features = false }
const-crypto = { version = "^0.3.0", default-features = false }
ed25519-compact = { version = "^2", default-features = false }
generic-array-struct = { version = "^0.2", default-features = false }
sanctum-fee-ratio = { version = "^1", default-features = false }
sanctum-u64-ratio = { version = "^1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_bytes = { version = "^0.11", default-features = false }
serde_json = "^1.0"


# solana crates (for dev)
solana-sdk = { version = "^2", default-features = false }
solana-pubkey = { version = "^2", default-features = false }
solana-account = { version = "^2", default-features = false }
solana-account-decoder-client-types = { version = "^2", default-features = false }
solana-instruction = { version = "^2", default-features = false }
mollusk-svm-programs-token = { version = "^0.1", default-features = false }
mollusk-svm = { version = "^0.1", default-features = false }

# workspace members
sanctum-marinade-liquid-staking-core = { path = "core" }



