[package]
name = "sanctum-marinade-liquid-staking-core"
version = "0.1.0"
edition = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_bytes"]
std = ["borsh/std", "serde?/std", "serde_bytes?/std"]

[dependencies]
borsh = { workspace = true, default-features = false, features = ["derive"] }
const-crypto = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-fee-ratio = { workspace = true }
sanctum-u64-ratio = { workspace = true }

# optional
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
serde_bytes = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
mollusk-svm = { workspace = true, features = ["all-builtins"] } # needed for stake program
mollusk-svm-programs-token = { workspace = true, features = ["token"] }
solana-account = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-sdk = { workspace = true, features = ["borsh"] }
